--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="flex justify-between items-end mb-6 px-2 sm:px-0">
         <div>
             <h1 class="text-xl sm:text-2xl font-bold text-black flex items-center gap-2"><i class="fa-solid fa-location-dot text-emerald-500"></i> ประกาศขายที่ดิน</h1>
-            <p class="text-black text-xs sm:text-sm mt-1">แหล่งรวมที่ดินทำเลทองทั่วไทย (เชื่อมต่อ Google Sheet)</p>
+            <p class="text-black text-xs sm:text-sm mt-1">แหล่งรวมที่ดินทำเลทองทั่วไทย </p>
         </div>
         <button onclick="openNewPostModal()" class="hidden md:flex bg-gradient-to-r from-emerald-600 to-green-500 hover:from-emerald-700 hover:to-green-600 text-white px-5 py-2.5 rounded-xl shadow-lg shadow-emerald-200 items-center gap-2 active:scale-95 transition-all font-medium"><i class="fa-solid fa-plus"></i> ลงประกาศฟรี</button>
     </div>
@@ -416,7 +416,7 @@ async function loadPosts() {
         posts = [...defaultPosts];
         Swal.fire({
              toast: true, position: 'top-end', icon: 'warning', 
-             title: 'ไม่สามารถเชื่อมต่อ Google Sheet ได้', text: 'แสดงข้อมูลตัวอย่างแทน',
+             title: 'ไม่สามารถเชื่อมต่อ ข้อมูล ได้', text: 'แสดงข้อมูลตัวอย่างแทน',
              showConfirmButton: false, timer: 3000
         });
     } finally {
@@ -821,7 +821,7 @@ async function savePost() {
         Swal.fire({
             icon: 'success',
             title: 'บันทึกสำเร็จ',
-            text: 'ข้อมูลถูกส่งไปยัง Google Sheet แล้ว',
+            text: 'ข้อมูลถูกส่งไปยัง ฐานข้อมูล แล้ว',
             timer: 2000,
             showConfirmButton: false
         });
@@ -897,3 +897,4 @@ init();
 </script>
 </body>
 </html>
+
