--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                     <input id="img" type="file" class="hidden" accept="image/*" multiple onchange="appendImages(this)">
                 </label>
             </div>
-            <p class="text-[10px] text-stone-400 mt-2 text-center">* แนะนำรูปแนวนอนเพื่อความสวยงาม</p>
+            <p class="text-[10px] text-stone-400 mt-2 text-center">* ต้องอัพ 3 รูป รูปถึงแสดง </p>
         </div>
     </div>
     
@@ -1141,3 +1141,4 @@ init();
 </script>
 </body>
 </html>
+
