--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
             <!-- Contact Buttons Grid -->
             <div id="viewContactActions" class="grid grid-cols-2 gap-3 mb-6 hidden">
-                <a id="viewPhoneLink" href="#" class="flex items-center justify-center gap-2 py-2.5 bg-emerald-500 text-white rounded-xl shadow-md hover:bg-emerald-600 transition-colors active:scale-95 text-sm font-bold">
+                <a id="viewPhoneLink" href="#" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center gap-2 py-2.5 bg-emerald-500 text-white rounded-xl shadow-md hover:bg-emerald-600 transition-colors active:scale-95 text-sm font-bold">
                     <i class="fa-solid fa-phone"></i> โทรออก
                 </a>
                 <a id="viewLineLink" href="#" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center gap-2 py-2.5 bg-[#06C755] text-white rounded-xl shadow-md hover:bg-[#05b34c] transition-colors active:scale-95 text-sm font-bold">
